--- a/src/main/java/axoloti/dialogs/PatchSettingsFrame.form
+++ b/src/main/java/axoloti/dialogs/PatchSettingsFrame.form
@@ -255,7 +255,7 @@
     </Component>
     <Component class="javax.swing.JCheckBox" name="jCheckBoxHasChannelAttrib">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Has MIDI channel attribute"/>
+        <Property name="text" type="java.lang.String" value="Has MIDI selector"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCheckBoxHasChannelAttribActionPerformed"/>
