--- a/src/main/java/axoloti/dialogs/PatchBank.form
+++ b/src/main/java/axoloti/dialogs/PatchBank.form
@@ -41,6 +41,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="0"/>
+    <Property name="title" type="java.lang.String" value="Untitled patch bank"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
