GUI: Save copy...

--- a/src/main/java/axoloti/PatchFrame.form
+++ b/src/main/java/axoloti/PatchFrame.form
@@ -30,6 +30,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuSaveAsActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuSaveCopy">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Save Copy..."/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuSaveCopyActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuSaveClip">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Save To Clipboard"/>
