--- a/src/main/java/axoloti/dialogs/PreferencesFrame.form
+++ b/src/main/java/axoloti/dialogs/PreferencesFrame.form
@@ -301,7 +301,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
                 <Column editable="false" title="Type" type="java.lang.String"/>
-                <Column editable="false" title="Name" type="java.lang.String"/>
+                <Column editable="false" title="Id" type="java.lang.String"/>
                 <Column editable="false" title="Location" type="java.lang.String"/>
                 <Column editable="false" title="Enabled" type="java.lang.Boolean"/>
               </Table>
@@ -330,6 +330,7 @@
                 </Column>
               </TableColumnModel>
             </Property>
+            <Property name="columnSelectionAllowed" type="boolean" value="true"/>
             <Property name="selectionModel" type="javax.swing.ListSelectionModel" editor="org.netbeans.modules.form.editors2.JTableSelectionModelEditor">
               <JTableSelectionModel selectionMode="0"/>
             </Property>
